libnotificationmanager/autotests/notifications_test.cpp
@@ -1,5 +1,6 @@
 /*
  *   Copyright (C) 2017 David Edmundson <davidedmundson@kde.org>
+ *   Copyright (C) 2020 Kai Uwe Broulik <kde@broulik.de>
  *
  * This program is free software you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -22,6 +23,10 @@
 #include <QDebug>
 
 #include "notification.h"
+#include "notificationsmodel.h"
+#include "server.h"
+
+namespace NotificationManager {
 
 class NotificationTest : public QObject
 {
@@ -31,6 +36,8 @@ public:
 private Q_SLOTS:
     void parse_data();
     void parse();
+
+    void compressNotificationRemoval();
 };
 
 void NotificationTest::parse_data()
@@ -85,6 +92,64 @@ void NotificationTest::parse()
     QCOMPARE(notification.body(), expectedOut);
 }
 
-QTEST_GUILESS_MAIN(NotificationTest)
+void NotificationTest::compressNotificationRemoval()
+{
+    const int notificationCount = 10;
+    const int gapId = 4;
+
+    auto model = NotificationsModel::createNotificationsModel();
+
+    QSignalSpy rowsRemovedSpy(model.data(), &QAbstractItemModel::rowsRemoved);
+    QVERIFY(rowsRemovedSpy.isValid());
+
+    for (uint i = 1; i <= notificationCount; ++i) {
+        Notification notification{i};
+        notification.setSummary(QStringLiteral("Notification %1").arg(i));
+        model->onNotificationAdded(notification);
+    }
+
+    QCOMPARE(model->rowCount(), notificationCount);
+
+    for (uint i = 1; i <= notificationCount; ++i) {
+        // Leave a gap inbetween
+        if (i != gapId) {
+            model->onNotificationRemoved(i, Server::CloseReason::Revoked);
+        }
+    }
+
+    // We should have two ranges that we ended up removing
+    QTRY_COMPARE(rowsRemovedSpy.count(), 2);
+
+    // The fact that it emits row removal in reverse order is an implementation detail
+    // We only really care that the number of rows emitted matches our expectation
+    int removedCount = 0;
+    for (const auto &removedEmission : rowsRemovedSpy) {
+        const int from = removedEmission.at(1).toInt();
+        const int to = removedEmission.at(2).toInt();
+        removedCount += (to - from) + 1;
+    }
+
+    QCOMPARE(removedCount, notificationCount - 1);
+    QCOMPARE(model->rowCount(), 1);
+
+    rowsRemovedSpy.clear();
+
+    // Removing a random non-existing notification should noop
+    model->onNotificationRemoved(3, Server::CloseReason::Revoked);
+    QTRY_COMPARE(rowsRemovedSpy.count(), 0);
+    QCOMPARE(model->rowCount(), 1);
+    rowsRemovedSpy.clear();
+
+    // Now remove the last one
+    model->onNotificationRemoved(gapId, Server::CloseReason::Revoked);
+    QTRY_COMPARE(rowsRemovedSpy.count(), 1);
+    QCOMPARE(rowsRemovedSpy.at(0).at(1), 0); // from
+    QCOMPARE(rowsRemovedSpy.at(0).at(2), 0); // to
+    QCOMPARE(model->rowCount(), 0);
+}
+
+} // namespace NotificationManager
+
+QTEST_GUILESS_MAIN(NotificationManager::NotificationTest)
 
 #include "notifications_test.moc"
